# openrtb

./: .gitignore  AUTHORS  Cargo.toml  README.md
examples/: prebid.rs
src/: serde_utils.rs
src/native/v1_2/: mod.rs
src/v2_5/: app.rs  banner.rs  bid.rs  bid_request.rs  bid_response.rs  category.rs  content.rs  data.rs  device.rs  format.rs  geo.rs  imp.rs  mod.rs  native.rs  publisher.rs  regulations.rs  seat_bid.rs  site.rs  source.rs  supply_chain.rs  user.rs
tests/: test_files.rs
