[package]
name = "openrtb"
version = "0.3.0"
authors = ["Tim Cheeseman <tcheeseman@appnexus.com>", "Kon Rybnikov <k-bx@k-bx.com>"]
description = "OpenRTB v2.5 and OpenRTB Dynamic Native Ads v1.2 types for rust forked for GrowthMate"
keywords = ["openrtb"]
categories = ["encoding"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/openrtb/"
homepage = "https://github.com/growth-mate/openrtb"
repository = "https://github.com/growth-mate/openrtb"
edition = "2021"

[lib]
name = "openrtb"

[dependencies]
phf = { version = "~0.8.0", features = ["macros"] }
phf_macros = "~0.8.0"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"

[dev-dependencies]
reqwest = { version = "~0.11", features = ["json", "blocking"] }
